--- a/dockertag/action.yml
+++ b/dockertag/action.yml
@@ -10,8 +10,8 @@ runs:
     - id: tag
       run: |
         regx="v[0-9]+\.[0-9]+\.[0-9]+.*"
-        shortname=$(echo ${GITHUB_REF_NAME} | rev | cut -d / -f 1 | rev | sed 's/^v//')
-        if [[ "${shortname}" =~ $regx ]]; then
+        shortname=$(echo ${GITHUB_REF_NAME} | rev | cut -d / -f 1 | rev | sed 's/^v\([0-9].*\)/\1/')
+        if [[ "${GITHUB_REF_NAME}" =~ $regx ]]; then
           echo "tag=${shortname}" >> "${shortname}"  >> "${GITHUB_OUTPUT}"
         else
           echo "tag=${shortname}-$(date +'%Y%m%d').${GITHUB_SHA:0:7}" >> "${GITHUB_OUTPUT}"
