--- a/dockertag/action.yml
+++ b/dockertag/action.yml
@@ -9,7 +9,7 @@ runs:
   steps:
     - id: tag
       run: |
-        regx="v[0-9]+\.[0-9]+\.[0-9]+.*"
+        regx="v?[0-9]+\.[0-9]+\.[0-9]+.*"
         shortname=$(echo ${GITHUB_REF_NAME} | rev | cut -d / -f 1 | rev | sed 's/^v\([0-9].*\)/\1/')
         if [[ "${GITHUB_REF_NAME}" =~ $regx ]]; then
           echo "tag=${shortname}" >> "${shortname}"  >> "${GITHUB_OUTPUT}"
